--- a/NexuSeguros/src/main/java/com/mycompany/views/borrarAgenClien.form
+++ b/NexuSeguros/src/main/java/com/mycompany/views/borrarAgenClien.form
@@ -148,11 +148,12 @@
     <Component class="javax.swing.JComboBox" name="jComboBox2">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
-            <StringItem index="0" value="Item 1"/>
-            <StringItem index="1" value="Item 2"/>
-            <StringItem index="2" value="Item 3"/>
-            <StringItem index="3" value="Item 4"/>
+          <StringArray count="5">
+            <StringItem index="0" value="Seleccionar"/>
+            <StringItem index="1" value="Nombre"/>
+            <StringItem index="2" value="Apellido P"/>
+            <StringItem index="3" value="Apellido M"/>
+            <StringItem index="4" value="Curp"/>
           </StringArray>
         </Property>
       </Properties>
